Выпадающий список в общей стилистике

--- a/templates/recipe_edit.html
+++ b/templates/recipe_edit.html
@@ -76,7 +76,7 @@
                         <div class="recipe-form__tags-extra" data-tag-dropdown>
                             <button
                                 type="button"
-                                class="btn btn--ghost btn--small recipe-form__tags-extra-toggle"
+                                class="btn btn--ghost tag-button recipe-form__tags-extra-toggle {% if selected_extra_tags %}tag-button--active{% endif %}"
                                 data-tag-dropdown-toggle
                                 aria-expanded="false"
                                 aria-haspopup="true"
