--- a/templates/recipe_edit.html
+++ b/templates/recipe_edit.html
@@ -19,6 +19,7 @@
                 enctype="multipart/form-data"
                 class="recipe-form__form"
             >
+                {{ csrf_input(request) }}
                 <div class="form-group">
                     <label for="title">Название блюда</label>
                     <input
