--- a/templates/recipe_new.html
+++ b/templates/recipe_new.html
@@ -133,6 +133,14 @@
                                 <option value="taste">по вкусу</option>
                             </select>
                         </div>
+                        <button
+                            type="button"
+                            class="btn btn--danger btn--small ingredient-row__remove"
+                            data-remove-ingredient
+                            aria-label="Удалить ингредиент"
+                        >
+                            −
+                        </button>
                     </div>
                 </div>
                 <button type="button" class="btn btn--ghost" id="add-ingredient-btn">Добавить ингредиент</button>
