--- a/templates/admin_tags.html
+++ b/templates/admin_tags.html
@@ -9,6 +9,7 @@
             <a href="{{ url_for('admin_users') }}" class="admin-nav__link">Пользователи</a>
             <a href="{{ url_for('admin_tags') }}" class="admin-nav__link admin-nav__link--active">Теги</a>
             <a href="{{ url_for('admin_ingredients') }}" class="admin-nav__link">Ингредиенты</a>
+            <a href="{{ url_for('admin_ingredient_prices') }}" class="admin-nav__link">Цены</a>
         </div>
         <div class="admin-tags__header">
             <div>
