--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -12,6 +12,7 @@
             <a href="{{ url_for('admin_users') }}" class="admin-nav__link admin-nav__link--active">Пользователи</a>
             <a href="{{ url_for('admin_tags') }}" class="admin-nav__link">Теги</a>
             <a href="{{ url_for('admin_ingredients') }}" class="admin-nav__link">Ингредиенты</a>
+            <a href="{{ url_for('admin_ingredient_prices') }}" class="admin-nav__link">Цены</a>
         </div>
         <div class="admin-users__header">
             <div>
