--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,19 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='/templates/favicon.ico') }}" />
 </head>
 <body{% if current_user and current_user.is_banned %} data-user-banned="1"{% endif %}>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function(m,e,t,r,i,k,a){
+        m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=107029252', 'ym');
+
+    ym(107029252, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", referrer: document.referrer, url: location.href, accurateTrackBounce:true, trackLinks:true});
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/107029252" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 <header class="header">
     <div class="container header__inner">
         <a href="{{ url_for('index') }}" class="logo" data-nav-home>FoodPlanner</a>
